--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,64 @@ build/
 
 ### VS Code ###
 .vscode/
+HELP.md
+target/
+.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
+
+# Java / Spring Boot
+**/target/
+**/.classpath
+**/.project
+**/.settings/
+**/*.iml
+
+# IntelliJ / STS / VS Code
+.idea/
+.vscode/
+
+# OS / misc
+.DS_Store
+Thumbs.db
+
+# H2 (if any file-based H2 in future)
+*.h2.db
+*.mv.db
+
+# Node / Angular (frontend)
+**/node_modules/
+**/dist/
+**/.angular/
+
+# Environment/config
+.env
+**/application-local.properties
