Added tenant-aware user retrieval methods in UserServiceImpl with DTO abstraction
- Replaced inefficient in-memory filtering with JPA query: findByTenantId(UUID)
- Implemented getAllUsersForCurrentTenant() using TenantContext for per-request tenant isolation
- Added toDTO() mapper to convert User entities to safe response models
- Ensured only relevant user data (id, name, email, role) is exposed via UserDTO
- Optimized for clean code, scalability, and multi-tenant security

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,10 @@ Thumbs.db
 # Environment/config
 .env
 **/application-local.properties
+# Ignore folder
+Python Scripts/
+
+# Ignore files
+Great! Based on the detailed bluepr.txt
+Multi-Tenant Helpdesk Ticket Management System.txt
+helpdesk-api.zip
